# vision_study

./: README.md  ch3_load_display_save.py  ch4_getting_and_setting.py  ch5_drawing.py  ch9.py  main.py  pyproject.toml
ch06/: arithmetic.py  bitwise.py  colorspaces.py  crop.py  flipping.py  imutils.py  masking.py  resize.py  rotate.py  splitting_and_merging.py  translation.py
ch07/: color_histograms.py  equalize.py  grayscale_histogram.py  histogram_with_mask.py
ch08/: blurring.py
ch09/: adaptive_thresholding.py  otsu_and_riddler.py  simple_thresholding.py
ch10/: canny.py  sobel_and_laplacian.py
ch11/: counting_coins.py  drawing_contours_via_index_snippet.py
