[project]
name = "vision-study-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "mahotas>=1,<2",
    "matplotlib>=3,<4",
    "numpy>=2,<3",
    "opencv-python>=4,<5",
    "scikit-learn>=1,<2",
    "scipy>=1,<2",
]
